Fix puzzle on mobile

--- a/styles/blocks/puzzle/_puzzle.scss
+++ b/styles/blocks/puzzle/_puzzle.scss
@@ -1,9 +1,11 @@
 
 .puzzle {
     display: block;
-	width: 100%;
 	height: 800px;
-    margin: 0 auto;
+	width: 1140px;
+	margin: 0 auto;
+	margin-left: -15px;
+	margin-right: -15px;
     cursor: pointer;
     user-select: none;
 }
